@@ -1,0 +1,1 @@
+ALTER TABLE srcpart TOUCH PARTITION (ds='2008-04-08', hr='13');
