@@ -1,0 +1,3 @@
+ALTER TABLE src TOUCH;
+ALTER TABLE srcpart TOUCH;
+ALTER TABLE srcpart TOUCH PARTITION (ds='2008-04-08', hr='12');
