@@ -69,6 +69,9 @@ Trunk -  Unreleased
     HIVE-1131. Add column lineage information to the pre execution hooks
     (Ashish Thusoo via namit)
 
+    HIVE-1300. alter table touch partition
+    (Paul Yang via namit)
+
   IMPROVEMENTS
     HIVE-983. Function from_unixtime takes long.
     (Ning Zhang via zshao)
